<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
        android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/showCategory"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/category"
            android:textSize="12dp" />

        <Button
            android:layout_width="15dp"
            android:layout_height="match_parent"
            android:icon="@android:drawable/ic_menu_add"/>

        </LinearLayout>
    <TextView
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author"/>
    <EditText
        android:id="@+id/author"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:inputType="text"
        android:textSize="20dp"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>


    <TextView
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"/>

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:inputType="text"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/publisher"/>
    <EditText
        android:id="@+id/publisher"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:inputType="text"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView

        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/isbn"/>

    <TextView
        android:id="@+id/isbn"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/inputDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/inputDate"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/memo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/memo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textMultiLine"/>


    <TextView
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/impression"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/impression"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textMultiLine"/>

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        android:layout_gravity="center_horizontal" />

    </LinearLayout>
</ScrollView>